--- a/cars.html
+++ b/cars.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107201859">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,14 +77,12 @@
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
-							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
-
+						<div class="header__phone"><a href="tel:+7(961)3091930">+7 (961)-309-19-30</a></div>
 
 						<div class="header__links links">
 							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
@@ -105,14 +103,14 @@
 
 				<div class="products__container _container">
 
-					<h2 class="products__title title">cars и паровозики</h2>
+					<h2 class="products__title title">Машинки и паровозики</h2>
 					<nav class="page__breadcrumbs breadcrumbs">
 						<ul class="breadcrumbs__list">
 							<li class="breadcrumbs__item">
 								<a href="./index.html" class="breadcrumbs__link">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<span class="breadcrumbs__current">cars и паровозики</span>
+								<span class="breadcrumbs__current">Машинки и паровозики</span>
 							</li>
 						</ul>
 					</nav>
@@ -120,42 +118,18 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 100.png" alt=" ">
+								<img src="img/cars/image_131.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Внедорожник
-										«ДМ-01»
-
-
+									<h3 class="item-product__title">Паровозик без горки
+										«ПБ-01»
 
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 40 950₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<a href="" class="item-product__image  ">
-								<img src="img/cars/image 101.png" alt=" ">
-							</a>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Машинка без горки
-										«ДМ-02»
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 53 250₽</div>
+									<div class="item-product__price">Цена: 70 000₽</div>
 
 								</div>
 
@@ -164,12 +138,32 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 102.png" alt=" ">
+								<img src="img/cars/image_132.jpg" alt="Lolito">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Детский Паровозик
+										«ДП-02»
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 68 000₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/cars/image_120.jpg" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Машинка с горкой
-										«ДМ-03»
+										«МГ-03»
 
 
 
@@ -187,12 +181,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 103.png" alt="Lolito">
+								<img src="img/cars/image_122.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Паровозик с горкой
-										«ДМ-04»
+										«ПГ-04»
 
 
 
@@ -202,7 +196,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 79 250₽</div>
+									<div class="item-product__price">Цена: 78 000₽</div>
 
 								</div>
 
@@ -216,7 +210,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Паровозик с 2-мя вагончиками
-										«ДМ-05»
+										«ПВ-05»
 
 
 
@@ -225,7 +219,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 145 250₽</div>
+									<div class="item-product__price">Цена: 145 000₽</div>
 
 								</div>
 
@@ -239,7 +233,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Паровозик с одним вагончиком
-										«ДМ-06»
+										«ПВ-06»
 
 
 
@@ -250,7 +244,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 115 250₽</div>
+									<div class="item-product__price">Цена: 115 000₽</div>
 
 								</div>
 
@@ -259,12 +253,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 106.png" alt="Lolito">
+								<img src="img/cars/image_123.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Локомотив с горкой
-										«ДМ-07»
+										«ЛГ-07»
 
 
 
@@ -274,7 +268,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 90 250₽</div>
+									<div class="item-product__price">Цена: 90 000₽</div>
 
 								</div>
 
@@ -283,24 +277,17 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 107.png" alt="Lolito">
+								<img src="img/cars/image_124.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Локомотив с вагончиком
-										«ДМ-08»
-
-
-
-
-
-
-
+										«ЛВ-08»
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 145 250₽</div>
+									<div class="item-product__price">Цена: 145 000₽</div>
 
 								</div>
 
@@ -309,12 +296,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 108.png" alt="Lolito">
+								<img src="img/cars/image_125.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Автобус
-										«ДМ-09»
+										«А-09»
 
 
 
@@ -326,7 +313,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 75 250₽</div>
+									<div class="item-product__price">Цена: 75 000₽</div>
 
 								</div>
 
@@ -335,12 +322,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 109.png" alt="Lolito">
+								<img src="img/cars/image_126.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Пожарная машина
-										«ДМ-10»
+										«ПМ-10»
 
 
 
@@ -351,7 +338,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 72 250₽</div>
+									<div class="item-product__price">Цена: 72 000₽</div>
 
 								</div>
 
@@ -360,12 +347,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 110.png" alt="Lolito">
+								<img src="img/cars/image_127.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Кораблик карапуз
-										«ДМ-11»
+										«КК-11»
 
 
 
@@ -375,7 +362,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 79 250₽</div>
+									<div class="item-product__price">Цена: 79 000₽</div>
 
 								</div>
 
@@ -384,12 +371,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 111.png" alt="Lolito">
+								<img src="img/cars/image_128.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Самосвал
-										«ДМ-12»
+										«С-12»
 
 
 
@@ -399,7 +386,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 68 950₽</div>
+									<div class="item-product__price">Цена: 68 000₽</div>
 
 								</div>
 
@@ -408,22 +395,17 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 112.png" alt="Lolito">
+								<img src="img/cars/image_129.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Трактор
-										«ДМ-12»
-
-
-
-
-
+										«Т-13»
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 59 250₽</div>
+									<div class="item-product__price">Цена: 59 000₽</div>
 
 								</div>
 
@@ -432,15 +414,32 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/cars/image 113.png" alt="Lolito">
+								<img src="img/cars/image_130.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Трактор с горкой
-										«ДМ-13»
+										«ТГ-14»
+									</h3>
 
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 72 000₽</div>
 
+								</div>
 
+							</div>
+						</article>
+
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/cars/image_118.jpg" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Внедорожник
+										«В-15»
 
 
 
@@ -448,7 +447,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 72 250₽</div>
+									<div class="item-product__price">Цена: 40 950₽</div>
 
 								</div>
 
@@ -456,14 +455,13 @@
 						</article>
 						<article class="products__item item-product">
 
-							<div class="item-product__image  ">
-								<img src="img/cars/image 114.png" alt="Lolito">
-							</div>
+							<a href="" class="item-product__image  ">
+								<img src="img/cars/image_119.jpg" alt=" ">
+							</a>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Паровозик без горки
-										«ДМ-14»
-
+									<h3 class="item-product__title">Машинка без горки
+										«МГ-16»
 
 
 
@@ -471,31 +469,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 49 650₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/cars/image 115.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Детский Паровозик
-										«СО-15»
-
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 68 250₽</div>
+									<div class="item-product__price">Цена: 53 000₽</div>
 
 								</div>
 
@@ -508,7 +482,7 @@
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Детский Кораблик «СО-16»
+									<h3 class="item-product__title">Детский Кораблик «ДК-17»
 
 
 
@@ -522,33 +496,6 @@
 
 							</div>
 						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/cars/image 117.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Детская машинка Кроха
-										«ДМ-15»
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 34 950₽</div>
-
-								</div>
-
-							</div>
-						</article>
-
-
-
-
 					</div>
 
 				</div>
@@ -567,8 +514,8 @@
 					<div class="footer__bik footer-text">БИК: 046015602</div>
 				</div>
 				<div class="footer__column">
-					<a href="tel:+7(908)1231213" class="footer__number footer-text">+7 (961) 30 919 30</a>
-					<a href="https://yandex.ru/maps/971/taganrog/house/ulitsa_chucheva_49/Z0EYfgJkSEEPQFptfX5wc31kYQ==/?ll=38.854149%2C47.212175&z=17.2" class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</a>
+					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -583,7 +530,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107201859"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
