--- a/rocking-courusels.html
+++ b/rocking-courusels.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107201859">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,17 +77,15 @@
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
-							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
-
+						<div class="header__phone"><a href="tel:+7(961)3091930">+7 (961)-309-19-30</a></div>
 
 						<div class="header__links links">
-							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
+							<a href="tel:+7(961)3091930" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
 							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
@@ -105,14 +103,14 @@
 
 				<div class="products__container _container">
 
-					<h2 class="products__title title">rocking на пружине</h2>
+					<h2 class="products__title title">Качалки на пружине</h2>
 					<nav class="page__breadcrumbs breadcrumbs">
 						<ul class="breadcrumbs__list">
 							<li class="breadcrumbs__item">
 								<a href="./index.html" class="breadcrumbs__link">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<span class="breadcrumbs__current">rocking на пружине</span>
+								<span class="breadcrumbs__current">Качалки на пружине</span>
 							</li>
 						</ul>
 					</nav>
@@ -120,7 +118,7 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/rocking/image 2.png" alt=" ">
+								<img src="img/rocking/image_37.jpg" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -128,7 +126,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 18 650₽</div>
+									<div class="item-product__price">Цена: 23 500₽</div>
 
 								</div>
 
@@ -137,15 +135,15 @@
 						<article class="products__item item-product">
 
 							<a href="" class="item-product__image  ">
-								<img src="img/rocking/image 3.png" alt=" ">
+								<img src="img/rocking/image_36.jpg" alt=" ">
 							</a>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Качалка балансир Утки</h3>
+									<h3 class="item-product__title">Качалка балансир</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 23 850₽</div>
+									<div class="item-product__price">Цена: 32 000₽</div>
 
 								</div>
 
@@ -154,15 +152,15 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/rocking/image 4.png" alt=" ">
+								<img src="img/rocking/image_38.jpg" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Качалка балансир Ромашка</h3>
+									<h3 class="item-product__title">Качалка балансир</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 23 850₽</div>
+									<div class="item-product__price">Цена: 19 000₽</div>
 
 								</div>
 
@@ -171,7 +169,7 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/rocking/image 5.png" alt="Lolito">
+								<img src="img/rocking/image_42.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -187,25 +185,8 @@
 						</article>
 						<article class="products__item item-product">
 
-							<div class="item-product__image  ">
-								<img src="img/rocking/image 6.png" alt=" ">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Качалка переносная</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 32 000₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
 							<a href="" class="item-product__image  ">
-								<img src="img/rocking/image 7.png" alt=" ">
+								<img src="img/rocking/image_43.jpg" alt=" ">
 							</a>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -214,23 +195,6 @@
 								</div>
 								<div class="item-product__prices">
 									<div class="item-product__price">Цена: 45 250₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/rocking/image 8.png" alt=" ">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Качалка Лодочка</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 37 650₽</div>
 
 								</div>
 
@@ -332,6 +296,25 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
+								<img src="img/rocking/image 14.png" alt="Lolito">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Качалка на пружине
+										«Дельфин»
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 19 000₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
 								<img src="img/rocking/image 13.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
@@ -351,12 +334,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/rocking/image 14.png" alt="Lolito">
+								<img src="img/rocking/image 17.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Качалка на пружине
-										«Дельфин»
+										«Пчелка»
 									</h3>
 
 								</div>
@@ -400,25 +383,6 @@
 								</div>
 								<div class="item-product__prices">
 									<div class="item-product__price">Цена: 35 100₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/rocking/image 17.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Качалка на пружине
-										«Пчелка»
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 19 000₽</div>
 
 								</div>
 
@@ -652,48 +616,10 @@
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
-
 							<div class="item-product__image  ">
-								<img src="img/rocking/image 30.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Качалка на пружине
-										«Машенька»
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 22 250₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/rocking/image 31.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Качалка на пружине
-										«Буренка»
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 26 000₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/rocking/image 32.png" alt="Lolito">
+								<img src="img/rocking/image_35.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -726,8 +652,8 @@
 					<div class="footer__bik footer-text">БИК: 046015602</div>
 				</div>
 				<div class="footer__column">
-					<a href="tel:+7(908)1231213" class="footer__number footer-text">+7 (961) 30 919 30</a>
-					<a href="https://yandex.ru/maps/971/taganrog/house/ulitsa_chucheva_49/Z0EYfgJkSEEPQFptfX5wc31kYQ==/?ll=38.854149%2C47.212175&z=17.2" class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</a>
+					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -742,7 +668,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107201859"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
