--- a/sandbox.html
+++ b/sandbox.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107201859">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,17 +77,15 @@
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
-							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
-
+						<div class="header__phone"><a href="tel:+7(961)3091930">+7 (961)-309-19-30</a></div>
 
 						<div class="header__links links">
-							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
+							<a href="tel:+7(961)3091930" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
 							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
@@ -105,14 +103,14 @@
 
 				<div class="products__container _container">
 
-					<h2 class="products__title title">sandbox</h2>
+					<h2 class="products__title title">Песочницы</h2>
 					<nav class="page__breadcrumbs breadcrumbs">
 						<ul class="breadcrumbs__list">
 							<li class="breadcrumbs__item">
 								<a href="./index.html" class="breadcrumbs__link">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<span class="breadcrumbs__current">sandbox</span>
+								<span class="breadcrumbs__current">Песочницы</span>
 							</li>
 						</ul>
 					</nav>
@@ -120,19 +118,20 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/sandbox/image 53.png" alt=" ">
+								<img src="img/sandbox/image 65.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница с крышкой
+									<h3 class="item-product__title">Песочный дворик опушка
 										«ПС-01»
 
 
+
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 26 250₽</div>
+									<div class="item-product__price">Цена: 132 250₽</div>
 
 								</div>
 
@@ -140,20 +139,18 @@
 						</article>
 						<article class="products__item item-product">
 
-							<a href="" class="item-product__image  ">
-								<img src="img/sandbox/image 54.png" alt=" ">
-							</a>
+							<div class="item-product__image  ">
+								<img src="img/sandbox/image_76.jpg" alt="Lolito">
+							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница с крышкой
+									<h3 class="item-product__title">Песочница Боровичок
 										«ПС-02»
-
-
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 24 950₽</div>
+									<div class="item-product__price">Цена: 41 250₽</div>
 
 								</div>
 
@@ -162,20 +159,18 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/sandbox/image 55.png" alt=" ">
+								<img src="img/sandbox/image_73.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница цветочек
-										«ПС-03»
-
+									<h3 class="item-product__title">Песочный дворик океан «ПС-03»
 
 
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 28 950₽</div>
+									<div class="item-product__price">Цена: 158 000₽</div>
 
 								</div>
 
@@ -184,21 +179,16 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/sandbox/image 56.png" alt="Lolito">
+								<img src="img/sandbox/image_75.jpg" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница стандарт
-										«ПС-04»
-
-
-
-
+									<h3 class="item-product__title">Песочный дворик Белоснежка «ПС-04»
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 18 250₽</div>
+									<div class="item-product__price">Цена: 170 250₽</div>
 
 								</div>
 
@@ -226,24 +216,23 @@
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 58.png" alt="Lolito">
-							</div>
+							<a href="" class="item-product__image  ">
+								<img src="img/sandbox/image 54.png" alt=" ">
+							</a>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница ромашка
+									<h3 class="item-product__title">Песочница с крышкой
 										«ПС-06»
-
-
 
 
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 38 950₽</div>
+									<div class="item-product__price">Цена: 24 950₽</div>
 
 								</div>
 
@@ -274,12 +263,98 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
+								<img src="img/sandbox/image_74.jpg" alt="Lolito">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Песочница Катерок
+										«ПС-08»
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 40 500₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/sandbox/image 53.png" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Песочница с крышкой
+										«ПС-09»
+
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 26 250₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/sandbox/image 58.png" alt="Lolito">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Песочница ромашка
+										«ПС-10»
+
+
+
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 38 950₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/sandbox/image 55.png" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Песочница цветочек
+										«ПС-11»
+
+
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 28 950₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
 								<img src="img/sandbox/image 60.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Песочница без козырька
-										«ПС-08»
+										«ПС-12»
 
 
 
@@ -298,13 +373,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/sandbox/image 61.png" alt="Lolito">
+								<img src="img/sandbox/image 56.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница Катерок
-										«ПС-09»
-
+									<h3 class="item-product__title">Песочница стандарт
+										«ПС-13»
 
 
 
@@ -313,7 +387,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 42 250₽</div>
+									<div class="item-product__price">Цена: 18 250₽</div>
 
 								</div>
 
@@ -327,7 +401,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Песочница кораблик
-										«ПС-10»
+										«ПС-14»
 
 
 
@@ -350,7 +424,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Песочный дворик
-										«ПС-11»
+										«ПС-15»
 
 
 
@@ -372,7 +446,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Песочный дворик
-										«ПС-12»
+										«ПС-16»
 
 
 
@@ -386,182 +460,6 @@
 
 							</div>
 						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 65.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Песочный дворик опушка
-										«ПС-13»
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 132 250₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 66.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница Боровичок
-										«ПС-14»
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 41 250₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 67.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Песочный дворик океан «ПС-15»
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 159 750₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 68.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница машинка
-										«ПС-16»
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 30 950₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 69.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница с грибком «ПС-17»
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 28 950₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 70.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница со счетами
-										«ПС-18»
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 38 650₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 71.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Песочница гусеница
-										«ПС-19»
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 28 850₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/sandbox/image 72.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Песочный дворик Белоснежка «ПС-21»
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 170 250₽</div>
-
-								</div>
-
-							</div>
-						</article>
-
-
 
 					</div>
 
@@ -581,8 +479,8 @@
 					<div class="footer__bik footer-text">БИК: 046015602</div>
 				</div>
 				<div class="footer__column">
-					<a href="tel:+7(908)1231213" class="footer__number footer-text">+7 (961) 30 919 30</a>
-					<a href="https://yandex.ru/maps/971/taganrog/house/ulitsa_chucheva_49/Z0EYfgJkSEEPQFptfX5wc31kYQ==/?ll=38.854149%2C47.212175&z=17.2" class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</a>
+					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -597,7 +495,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107201859"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
