--- a/slides.html
+++ b/slides.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 
 <head>
-	<title>Горки</title>
+	<title>Горки </title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107201859">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,17 +77,15 @@
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
-							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
-
+						<div class="header__phone"><a href="tel:+7(961)3091930">+7 (961)-309-19-30</a></div>
 
 						<div class="header__links links">
-							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
+							<a href="tel:+7(961)3091930" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
 							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
@@ -105,14 +103,14 @@
 
 				<div class="products__container _container">
 
-					<h2 class="products__title title">slides</h2>
+					<h2 class="products__title title">Горки</h2>
 					<nav class="page__breadcrumbs breadcrumbs">
 						<ul class="breadcrumbs__list">
 							<li class="breadcrumbs__item">
 								<a href="./index.html" class="breadcrumbs__link">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<span class="breadcrumbs__current">slides</span>
+								<span class="breadcrumbs__current">Горки</span>
 							</li>
 						</ul>
 					</nav>
@@ -120,7 +118,7 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/slides/image 43.png" alt=" ">
+								<img src="img/slides/image_54.png" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -139,13 +137,72 @@
 						</article>
 						<article class="products__item item-product">
 
+							<div class="item-product__image  ">
+								<img src="img/slides/image_55.jpg" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Горка мини
+										«ГД-02»
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 39 650₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/slides/image_56.jpg" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Горка мини
+										«ГД-03»
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 39 650₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/slides/image__53.jpg" alt="Lolito">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Горка зимняя
+										«ГД-04»
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 68 000₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
 							<a href="" class="item-product__image  ">
 								<img src="img/slides/image 44.png" alt=" ">
 							</a>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Горка мини
-										«ГД-02»
+										«ГД-05»
 
 									</h3>
 
@@ -165,7 +222,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Горка стандарт
-										«ГД-03»
+										«ГД-06»
 
 
 									</h3>
@@ -186,10 +243,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Горка ДИНО
-										«ГД-04»
-
-
-
+										«ГД-07»
 									</h3>
 
 								</div>
@@ -208,7 +262,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Горка дракон
-										«ГД-05»
+										«ГД-08»
 
 
 									</h3>
@@ -224,12 +278,32 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
+								<img src="img/slides/image 43.png" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Горка мини
+										«ГД-09»
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 39 650₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
 								<img src="img/slides/image 48.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Горка львёнок
-										«ГД-06»
+										«ГД-10»
 
 
 
@@ -251,7 +325,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Горка слоненок
-										«ГД-07»
+										«ГД-11»
 
 
 									</h3>
@@ -272,7 +346,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Горка петушки
-										«ГД-08»
+										«ГД-12»
 
 
 
@@ -287,52 +361,6 @@
 
 							</div>
 						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/slides/image 51.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Горка Самолетик
-										«ГД-09»
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 42 950₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/slides/image 52.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Горка зимняя
-										«ГД-10»
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 97 950₽</div>
-
-								</div>
-
-							</div>
-						</article>
-
 
 					</div>
 
@@ -352,8 +380,8 @@
 					<div class="footer__bik footer-text">БИК: 046015602</div>
 				</div>
 				<div class="footer__column">
-					<a href="tel:+7(908)1231213" class="footer__number footer-text">+7 (961) 30 919 30</a>
-					<a href="https://yandex.ru/maps/971/taganrog/house/ulitsa_chucheva_49/Z0EYfgJkSEEPQFptfX5wc31kYQ==/?ll=38.854149%2C47.212175&z=17.2" class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</a>
+					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -368,7 +396,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107201859"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
