--- a/swing.html
+++ b/swing.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107201859">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,17 +77,15 @@
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
-							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
-
+						<div class="header__phone"><a href="tel:+7(961)3091930">+7 (961)-309-19-30</a></div>
 
 						<div class="header__links links">
-							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
+							<a href="tel:+7(961)3091930" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
 							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
@@ -109,14 +107,14 @@
 
 				<div class="products__container _container">
 
-					<h2 class="products__title title">swing</h2>
+					<h2 class="products__title title">Качели</h2>
 					<nav class="page__breadcrumbs breadcrumbs">
 						<ul class="breadcrumbs__list">
 							<li class="breadcrumbs__item">
 								<a href="./index.html" class="breadcrumbs__link">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<span class="breadcrumbs__current">swing</span>
+								<span class="breadcrumbs__current">Качели</span>
 							</li>
 						</ul>
 					</nav>
@@ -124,11 +122,11 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/swing/image 39.png" alt=" ">
+								<img src="img/swing/image_43.jpg" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">swing двойные
+									<h3 class="item-product__title">Качели двойные
 										«КД-01»
 									</h3>
 
@@ -140,25 +138,25 @@
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
-							<a href="" class="item-product__image  ">
-								<img src="img/swing/image 40.png" alt=" ">
-							</a>
+							<div class="item-product__image  ">
+								<img src="img/swing/image_44.jpg" alt="Lolito">
+							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">swing одинарный
+									<h3 class="item-product__title">Качели гнездо
 										«КД-02»
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 21 250₽</div>
-
+									<div class="item-product__price">Цена: 30 000₽</div>
 								</div>
-
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
@@ -166,7 +164,7 @@
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">swing на стойках
+									<h3 class="item-product__title">Качели на стойках
 										«КД-03»
 									</h3>
 
@@ -185,7 +183,7 @@
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">swing гнездо
+									<h3 class="item-product__title">Качели гнездо
 										«КД-04»
 									</h3>
 
@@ -198,7 +196,25 @@
 							</div>
 						</article>
 
+						<article class="products__item item-product">
 
+							<a href="" class="item-product__image  ">
+								<img src="img/swing/image 40.png" alt=" ">
+							</a>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Качели одинарный
+										«КД-05»
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 21 250₽</div>
+
+								</div>
+
+							</div>
+						</article>
 					</div>
 
 				</div>
@@ -217,8 +233,8 @@
 					<div class="footer__bik footer-text">БИК: 046015602</div>
 				</div>
 				<div class="footer__column">
-					<a href="tel:+7(908)1231213" class="footer__number footer-text">+7 (961) 30 919 30</a>
-					<a href="https://yandex.ru/maps/971/taganrog/house/ulitsa_chucheva_49/Z0EYfgJkSEEPQFptfX5wc31kYQ==/?ll=38.854149%2C47.212175&z=17.2" class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</a>
+					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -233,7 +249,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107201859"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
