--- a/carousels.html
+++ b/carousels.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107201859">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,14 +77,12 @@
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
-							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
-
+						<div class="header__phone"><a href="tel:+7(961)3091930">+7 (961)-309-19-30</a></div>
 
 						<div class="header__links links">
 							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
@@ -105,14 +103,14 @@
 
 				<div class="products__container _container">
 
-					<h2 class="products__title title">carousels</h2>
+					<h2 class="products__title title">Карусели</h2>
 					<nav class="page__breadcrumbs breadcrumbs">
 						<ul class="breadcrumbs__list">
 							<li class="breadcrumbs__item">
 								<a href="./index.html" class="breadcrumbs__link">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<span class="breadcrumbs__current">carousels</span>
+								<span class="breadcrumbs__current">Карусели</span>
 							</li>
 						</ul>
 					</nav>
@@ -120,7 +118,7 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/carousels/image 34.png" alt=" ">
+								<img src="img/carousels/image_39.jpg" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -128,12 +126,13 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 22 950₽</div>
+									<div class="item-product__price">Цена: 27 000₽</div>
 
 								</div>
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
 							<a href="" class="item-product__image  ">
@@ -145,16 +144,17 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 28 950₽</div>
+									<div class="item-product__price">Цена: 29 000₽</div>
 
 								</div>
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/carousels/image 36.png" alt=" ">
+								<img src="img/carousels/image 34.png" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -162,7 +162,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 26 950₽</div>
+									<div class="item-product__price">Цена: 22 950₽</div>
 
 								</div>
 
@@ -179,7 +179,24 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 29 650₽</div>
+									<div class="item-product__price">Цена: 30 000₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/carousels/image_40.jpg" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Карусель «КР-05»</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 32 000₽</div>
 
 								</div>
 
@@ -192,11 +209,83 @@
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Карусель «КР-05»</h3>
+									<h3 class="item-product__title">Карусель «КР-06»</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 32 050₽</div>
+									<div class="item-product__price">Цена: 32 000₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/carousels/image 36.png" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Карусель «КР-07»</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 27 000₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/carousels/image_41.jpg" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Карусель «КР-08»</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 30 000₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/carousels/image_43.jpg" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Карусель «КР-09»</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 23 000₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/carousels/image_42.jpg" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Карусель «КР-10»</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 35 000₽</div>
 
 								</div>
 
@@ -221,8 +310,8 @@
 					<div class="footer__bik footer-text">БИК: 046015602</div>
 				</div>
 				<div class="footer__column">
-					<a href="tel:+7(908)1231213" class="footer__number footer-text">+7 (961) 30 919 30</a>
-					<a href="https://yandex.ru/maps/971/taganrog/house/ulitsa_chucheva_49/Z0EYfgJkSEEPQFptfX5wc31kYQ==/?ll=38.854149%2C47.212175&z=17.2" class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</a>
+					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -237,7 +326,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107201859"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
