--- a/gaming-complexes.html
+++ b/gaming-complexes.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107201859">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,17 +77,15 @@
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
-							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
-
+						<div class="header__phone"><a href="tel:+7(961)3091930">+7 (961)-309-19-30</a></div>
 
 						<div class="header__links links">
-							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
+							<a href="tel:+7(961)3091930" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
 							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
@@ -122,12 +120,14 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/gamers/image 118.png" alt=" ">
+								<img src="img/gamers/image 129.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Детский игровой комплекс
+									<h3 class="item-product__title">Детские игровое комплекс
 										«ДИК-01»
+
+
 
 
 
@@ -136,12 +136,13 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 90 950₽</div>
+									<div class="item-product__price">Цена: 144 650₽</div>
 
 								</div>
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
 							<a href="" class="item-product__image  ">
@@ -168,12 +169,14 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/gamers/image 120.png" alt=" ">
+								<img src="img/gamers/image 123.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Горка манеж
+									<h3 class="item-product__title">Детские игровое комплекс
 										«ДИК-03»
+
+
 
 
 
@@ -183,12 +186,13 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 85 250₽</div>
+									<div class="item-product__price">Цена: 195 250₽</div>
 
 								</div>
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
@@ -241,15 +245,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/gamers/image 123.png" alt="Lolito">
+								<img src="img/gamers/image 118.png" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
-									<h3 class="item-product__title">Детские игровое комплекс
+									<h3 class="item-product__title">Детский игровой комплекс
 										«ДИК-06»
-
-
-
 
 
 
@@ -258,12 +259,13 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 195 250₽</div>
+									<div class="item-product__price">Цена: 90 950₽</div>
 
 								</div>
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
@@ -346,12 +348,37 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
+								<img src="img/gamers/image 120.png" alt=" ">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Горка манеж
+										«ДИК-10»
+
+
+
+
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 85 250₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
 								<img src="img/gamers/image 127.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-10»
+										«ДИК-11»
 
 
 
@@ -377,31 +404,6 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-11»
-
-
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 99 650₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
-								<img src="img/gamers/image 129.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Детские игровое комплекс
 										«ДИК-12»
 
 
@@ -413,7 +415,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 144 650₽</div>
+									<div class="item-product__price">Цена: 99 650₽</div>
 
 								</div>
 
@@ -473,36 +475,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/gamers/image 132.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-15»
-
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 195 740₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
 								<img src="img/gamers/image 133.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-16»
+										«ДИК-15»
 
 
 
@@ -527,7 +505,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-17»
+										«ДИК-16»
 
 
 
@@ -550,7 +528,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-18»
+										«ДИК-17»
 
 
 
@@ -574,7 +552,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-19»
+										«ДИК-18»
 
 
 
@@ -597,7 +575,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-20»
+										«ДИК-19»
 
 
 
@@ -615,7 +593,31 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/gamers/image 138.png" alt=" ">
+								<img src="img/gamers/image 132.png" alt="Lolito">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Детские игровое комплекс
+										«ДИК-20»
+
+
+
+
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 195 740₽</div>
+
+								</div>
+
+							</div>
+						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/gamers/image 143.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -625,20 +627,25 @@
 
 
 
+
+
+
+
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 250 250₽</div>
+									<div class="item-product__price">Цена: 370 550₽</div>
 
 								</div>
 
 							</div>
 						</article>
+
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/gamers/image 139.png" alt="Lolito">
+								<img src="img/gamers/image 138.png" alt=" ">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
@@ -648,13 +655,11 @@
 
 
 
-
-
 									</h3>
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 294 950₽</div>
+									<div class="item-product__price">Цена: 250 250₽</div>
 
 								</div>
 
@@ -738,39 +743,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/gamers/image 143.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-26»
-
-
-
-
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 370 550₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
 								<img src="img/gamers/image 144.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-27»
+										«ДИК-26»
 
 
 
@@ -789,6 +767,32 @@
 
 							</div>
 						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/gamers/image 139.png" alt="Lolito">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Детские игровое комплекс
+										«ДИК-27»
+
+
+
+
+
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 294 950₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
@@ -843,37 +847,12 @@
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
-								<img src="img/gamers/image 147.png" alt="Lolito">
-							</div>
-							<div class="item-product__body">
-								<div class="item-product__content">
-									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-30»
-
-
-
-
-
-
-									</h3>
-
-								</div>
-								<div class="item-product__prices">
-									<div class="item-product__price">Цена: 195 250₽</div>
-
-								</div>
-
-							</div>
-						</article>
-						<article class="products__item item-product">
-
-							<div class="item-product__image  ">
 								<img src="img/gamers/image 148.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-31»
+										«ДИК-30»
 
 
 
@@ -898,7 +877,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-32»
+										«ДИК-31»
 
 
 
@@ -924,7 +903,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-33»
+										«ДИК-32»
 
 
 
@@ -948,7 +927,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-34»
+										«ДИК-33»
 
 
 
@@ -973,7 +952,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-35»
+										«ДИК-34»
 
 
 
@@ -996,7 +975,7 @@
 							<div class="item-product__body">
 								<div class="item-product__content">
 									<h3 class="item-product__title">Детские игровое комплекс
-										«ДИК-36»
+										«ДИК-35»
 
 
 
@@ -1012,6 +991,32 @@
 
 							</div>
 						</article>
+						<article class="products__item item-product">
+
+							<div class="item-product__image  ">
+								<img src="img/gamers/image 147.png" alt="Lolito">
+							</div>
+							<div class="item-product__body">
+								<div class="item-product__content">
+									<h3 class="item-product__title">Детские игровое комплекс
+										«ДИК-36»
+
+
+
+
+
+
+									</h3>
+
+								</div>
+								<div class="item-product__prices">
+									<div class="item-product__price">Цена: 195 250₽</div>
+
+								</div>
+
+							</div>
+						</article>
+
 						<article class="products__item item-product">
 
 							<div class="item-product__image  ">
@@ -1269,7 +1274,7 @@
 						</article>
 						<article class="products__item item-product">
 
-							<div class="item-produмашинкиct__image  ">
+							<div class="item-product__image  ">
 								<img src="img/gamers/image 164.png" alt="Lolito">
 							</div>
 							<div class="item-product__body">
@@ -1336,8 +1341,8 @@
 					<div class="footer__bik footer-text">БИК: 046015602</div>
 				</div>
 				<div class="footer__column">
-					<a href="tel:+7(908)1231213" class="footer__number footer-text">+7 (961) 30 919 30</a>
-					<a href="https://yandex.ru/maps/971/taganrog/house/ulitsa_chucheva_49/Z0EYfgJkSEEPQFptfX5wc31kYQ==/?ll=38.854149%2C47.212175&z=17.2" class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</a>
+					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -1352,7 +1357,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107201859"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
