--- a/other.html
+++ b/other.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221107201859">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,17 +77,15 @@
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".feedback" class="menu__link">Отавить заявку</a>
-							</li>
 							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
 									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
-
+						<div class="header__phone"><a href="tel:+7(961)3091930">+7 (961)-309-19-30</a></div>
 
 						<div class="header__links links">
-							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
+							<a href="tel:+7(961)3091930" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
 							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
@@ -105,14 +103,14 @@
 
 				<div class="products__container _container">
 
-					<h2 class="products__title title">others</h2>
+					<h2 class="products__title title">Другое</h2>
 					<nav class="page__breadcrumbs breadcrumbs">
 						<ul class="breadcrumbs__list">
 							<li class="breadcrumbs__item">
 								<a href="./index.html" class="breadcrumbs__link">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<span class="breadcrumbs__current">others</span>
+								<span class="breadcrumbs__current">Другое</span>
 							</li>
 						</ul>
 					</nav>
@@ -781,8 +779,8 @@
 					<div class="footer__bik footer-text">БИК: 046015602</div>
 				</div>
 				<div class="footer__column">
-					<a href="tel:+7(908)1231213" class="footer__number footer-text">+7 (961) 30 919 30</a>
-					<a href="https://yandex.ru/maps/971/taganrog/house/ulitsa_chucheva_49/Z0EYfgJkSEEPQFptfX5wc31kYQ==/?ll=38.854149%2C47.212175&z=17.2" class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</a>
+					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -797,7 +795,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221107201859"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
